--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -180,6 +180,17 @@
 			<artifactId>commons-collections</artifactId>
 			<version>3.2.2</version>
 		</dependency>
+		
+		<dependency> 
+      		<groupId>org.apache.poi</groupId> 
+      		<artifactId>poi</artifactId> 
+      		<version>3.12</version> 
+    	</dependency> 
+    	<dependency> 
+      		<groupId>org.apache.poi</groupId> 
+      		<artifactId>poi-ooxml</artifactId> 
+      		<version>3.12</version> 
+    	</dependency> 
 
 		<!-- <dependency>
 			<groupId>velocity</groupId>
