--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -66,7 +66,14 @@
 		</dependency>
 
 		<!-- End OpenMRS core -->
-
+		
+		<dependency>
+			<groupId>org.openmrs.module</groupId>
+			<artifactId>legacyui-omod</artifactId>
+			<version>1.5.0</version>
+			<scope>provided</scope>
+		</dependency>
+		
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
