--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -190,7 +190,13 @@
       		<groupId>org.apache.poi</groupId> 
       		<artifactId>poi-ooxml</artifactId> 
       		<version>3.12</version> 
-    	</dependency> 
+    	</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-collections4</artifactId>
+			<version>4.2</version>
+		</dependency>
+		
 
 		<!-- <dependency>
 			<groupId>velocity</groupId>
