Prepare the module for 2.x

--- a/.gitignore
+++ b/.gitignore
@@ -24,9 +24,9 @@ hs_err_pid*
 
 .DS_Store
 .mvn/*
-disa-api-core/.mvn/*
-disa-api-integ/.mvn/*
 .classpath
 .project
 .settings/
 
+omod/target/*
+api/target/*
