--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,33 @@
-###############
-##
-Eclipse
-###############
-*.pydevproject
-.project
-.metadata
-.gradle
-bin/
-tmp/
-target/
-api/target/
-omod/
-*.tmp
-*.bak
-*.swp
-*~.nib
-local.properties
-.classpath
-.settings/
-.loadpath
-
-# Locally stored "Eclipse launch configurations"
-*.launch
-
+# Compiled class file
 *.class
 
-# idea
-.idea/
-*.iml
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+.DS_Store
+.mvn/*
+disa-api-core/.mvn/*
+disa-api-integ/.mvn/*
+.classpath
+.project
+.settings/
+
+/target/**
