--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -81,12 +81,6 @@
 		</dependency>
 		
 		<dependency>
-            <groupId>com.sun.mail</groupId>
-            <artifactId>javax.mail</artifactId>
-            <version>1.6.2</version>
-        </dependency>
-
-		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
 			<version>4.5.9</version>
@@ -199,18 +193,30 @@
       		<artifactId>poi</artifactId> 
       		<version>3.12</version> 
     	</dependency> 
-    	<dependency> 
+    	
+    	<dependency>  
       		<groupId>org.apache.poi</groupId> 
       		<artifactId>poi-ooxml</artifactId> 
       		<version>3.12</version> 
-    	</dependency> 
+    	</dependency>
+    	
+		<!--  <dependency>
+		    <groupId>javax.activation</groupId>
+		    <artifactId>activation</artifactId>
+		    <version>1.1.1</version>
+		</dependency>-->
+    	
+		<!--  <dependency>
+		    <groupId>javax.mail</groupId>
+		    <artifactId>mail</artifactId>
+		    <version>1.4.2</version>
+		</dependency>-->
 
-		<!-- <dependency>
+		<!--<dependency>
 			<groupId>velocity</groupId>
-			<artifactId>velocity-dep</artifactId>
+			<artifactId>velocity</artifactId>
 			<version>1.5</version>
 		</dependency> -->
-
 	</dependencies>
 
 	<build>
