--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>org.openmrs.module</groupId>
 	<artifactId>disa</artifactId>
-	<version>2.0.0</version>
+	<version>2.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>Disa_Interoperability Module</name>
 	<description>Allows integration with disa data</description>
@@ -41,9 +41,9 @@
 	<dependencyManagement>
 		<dependencies>
 
-			<!-- Libraries to add as dependencies with compile or runtime scope: Find 
-				matching dependencies in the maven central repository. <dependency> <groupId>org.other.library</groupId> 
-				<artifactId>library-name</artifactId> <version>library.version</version> 
+			<!-- Libraries to add as dependencies with compile or runtime scope: Find
+				matching dependencies in the maven central repository. <dependency> <groupId>org.other.library</groupId>
+				<artifactId>library-name</artifactId> <version>library.version</version>
 				<scope>compile</scope> </dependency> -->
 
 
