--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<artifactId>disa</artifactId>
 	<version>2.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
-	<name>Disa_Interoperability Module</name>
+	<name>Disa Interoperability Module</name>
 	<description>Allows integration with disa data</description>
 	<url>https://wiki.openmrs.org/display/docs/Disa+Module+Module+Module</url>
 
