--- a/api/pom.xml
+++ b/api/pom.xml
@@ -64,6 +64,12 @@
 		<!-- End OpenMRS core -->
 
 		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 		</dependency>
