--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -67,6 +67,13 @@
 
 		<!-- End OpenMRS core -->
 
+
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<scope>test</scope>
+		</dependency>
+
 		<dependency>
 			<groupId>org.openmrs.module</groupId>
 			<artifactId>legacyui-omod</artifactId>
