--- a/api/pom.xml
+++ b/api/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.openmrs.module</groupId>
 		<artifactId>disa</artifactId>
-		<version>2.1.3-SNAPSHOT</version>
+		<version>2.2.0</version>
 	</parent>
 
 	<artifactId>disa-api</artifactId>
