--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.openmrs.module</groupId>
 		<artifactId>disa</artifactId>
-		<version>2.1.3-SNAPSHOT</version>
+		<version>2.2.0</version>
 	</parent>
 
 	<artifactId>disa-omod</artifactId>
