--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>org.openmrs.module</groupId>
 	<artifactId>disa</artifactId>
-	<version>2.1.3-SNAPSHOT</version>
+	<version>2.2.0</version>
 	<packaging>pom</packaging>
 	<name>Disa Interoperability Module</name>
 	<description>Allows integration with disa data</description>
