--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.openmrs.module</groupId>
 		<artifactId>disa</artifactId>
-		<version>2.5.1-SNAPSHOT</version>
+		<version>2.6.0</version>
 	</parent>
 
 	<artifactId>disa-omod</artifactId>
