--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,6 @@ jobs:
       - name: Upload omod
         uses: actions/upload-artifact@v4
         with:
-          name: omod
           path: |
             omod/target/*.omod
+          compression-level: 0
