Add maven release plugin

--- a/pom.xml
+++ b/pom.xml
@@ -27,9 +27,7 @@
 	</organization>
 
 	<scm>
-		<connection>scm:svn:https://svn.openmrs.org/openmrs-modules/disa/trunk/</connection>
-		<developerConnection>scm:svn:https://svn.openmrs.org/openmrs-modules/disa/trunk/</developerConnection>
-		<url>https://svn.openmrs.org/openmrs-modules/disa/trunk/</url>
+		<developerConnection>scm:git:git@github.com:ynurmahomed/disa.git</developerConnection>
 	</scm>
 
 	<modules>
@@ -201,6 +199,11 @@
 					<artifactId>maven-dependency-plugin</artifactId>
 					<version>2.4</version>
 				</plugin>
+                                <plugin>
+                                        <groupId>org.apache.maven.plugins</groupId>
+                                        <artifactId>maven-release-plugin</artifactId>
+                                        <version>3.1.1</version>
+                                </plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
