--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.openmrs.module</groupId>
 	<artifactId>disa</artifactId>
-	<version>2.7.0-SNAPSHOT</version>
+	<version>2.7.0</version>
 	<packaging>pom</packaging>
 	<name>Disa Interoperability Module</name>
 	<description>Allows integration of Disa Lab results with SESP</description>
@@ -28,7 +26,8 @@
 
 	<scm>
 		<developerConnection>scm:git:git@github.com:ynurmahomed/disa.git</developerConnection>
-	</scm>
+	  <tag>2.7.0</tag>
+  </scm>
 
 	<modules>
 		<module>api</module>
