--- a/api/pom.xml
+++ b/api/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.openmrs.module</groupId>
 		<artifactId>disa</artifactId>
-		<version>2.7.0</version>
+		<version>2.7.1-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>disa-api</artifactId>
